name:                runmemo
version:             0.1.0.0
synopsis:            A simple memoization helper library

-- description:         

homepage:            https://github.com/DanBurton/runmemo
license:             BSD3
license-file:        LICENSE
author:              Dan Burton
maintainer:          danburton.email@gmail.com
copyright:           (c) Dan Burton 2012

category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src
  exposed-modules:   Data.RunMemo
  extensions:        NoImplicitPrelude
  ghc-options:       -Wall
  -- other-modules:       
  -- build-depends:       

source-repository head
  type:     git
  location: git@github.com:DanBurton/runmemo.git
