name:                runmemo
version:             1.0.0.0
synopsis:            A simple memoization helper library

description:
  A simple memoization helper library.
  .
  Detailed description coming soon.
  If not, email me.

homepage:            https://github.com/DanBurton/runmemo
license:             BSD3
license-file:        LICENSE
author:              Dan Burton
maintainer:          danburton.email@gmail.com
copyright:           (c) Dan Burton 2012

category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src
  exposed-modules:   Data.RunMemo
  extensions:        NoImplicitPrelude
  ghc-options:       -Wall

test-suite test-race
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         test-race.hs
  build-depends:   data-memocombinators == 0.4.*, base == 4.5.*

source-repository head
  type:     git
  location: git@github.com:DanBurton/runmemo.git

source-repository this
  type:     git
  location: git@github.com:DanBurton/runmemo.git
  tag:      runmemo-1.0.0.0
